Changes in mirt 0.8.1

NEW FEATURES

- updated documentation for data sets by adding relavent examples, and added Bock1997 data set
  for replicating table 3 in van der Linden, W. J. & Hambleton, R. K.'s (1997)
  Handbook of modern item response theory

Changes in mirt 0.8.0

NEW FEATURES

- support for random effect predictors now available in mixedmirt(), along with a randef() function
  for computing MAP predictions for the random parameters

- EAPsum support in fscores() for mixed item types

- for consistency with current IRT software (rather than TESTFACT and POLYFACT), the scaling 
  constant has been set to D = 1 and fixed at this value

- nominal.highlow option added to specify which categories are the highest and lowest in nominal models.
  Often provide better numerical stability when utilized. Default is still to use the highest and lowest 
  categories

- increase number of draws in the Monte Carlo calculation of the log-likelihood from 3000 to 5000

- when itemtype all equal 'Rasch' or 'rsm' models the latent variance parameter(s) are automatically 
  freed and estimated

- mixedmirt() more supportive of user defined R formulas, and now includes an internal 'items'
  argument to create the item design matrix used to estimate the intercepts. More closely mirrors 
  the results from lme4 for Rasch models as well (special thanks to Kevin Joldersma for
  testing and debugging)

- drop.zeros option added to extract.item and itemplot to reduce dimensionality of factor structures
  that contain slopes equal to zero

- EM tolerance (TOL argument) default dropped to .0001 (originally .001)

- type = 'score' and type = 'infoSE' added to plot() generic for expected total score and joint test
  standard error/information 

- custom latent mean and covariance matrix can be passed to fscores() for EAP, MAP, and EAPsum methods.
  Also applies to personfit() and itemfit() diagnostics 

- scores.only option to fscores() for returning just the estimated factor scores 
